# backend_todo

./: .gitignore  Dockerfile  GUIDE.md  README.md  compose.yaml  entrypoint.sh  fly.toml  notas.txt  pyproject.toml
.github/workflows/: pipeline.yml
app/: app.py  main.py  security.py
app/api/V1/routers/: auth.py  todos.py  users.py
app/core/: security.py  settings.py
app/models/: models.py
app/schemas/: schemas.py
migrations/: env.py
migrations/versions/: 27f656240cd8_adicionando_created_at_e_updated_at_na_.py  70d438446747_create_users_table.py  9644ec1e4966_updated_at_user_table.py  f827a662533f_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
